--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>hu.unideb.inf</groupId>
-    <artifactId>restexample</artifactId>
+    <artifactId>zoo_animals</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
